# toorust

./: .gitignore  Cargo.toml  biome.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vercel.json
api/: api.d.ts  crab.rs  echo.rs  search.rs
app/: layout.tsx  page.tsx
components/custom/: search.tsx  theme-switch.tsx
components/ui/: command.tsx
lib/: utils.ts
tests/: 1.spec.ts  main.spec.ts
tools/add/: Cargo.toml
