[package]
name = "next-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros"] }
serde_json = { version = "1", features = ["raw_value"] }
# Documentation: https://docs.rs/vercel_runtime/latest/vercel_runtime
vercel_runtime = { version = "1.1.0" }
url = "2.4.1"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }

# libs
[lib]
path = "api/utils.rs"

# Each handler has to be specified as [[bin]]
# Note that you need to provide unique names for each binary

[[bin]]
name = "crab"
path = "api/crab.rs"

[[bin]]
name = "echo"
path = "api/echo.rs"
