[package]
name = "toorust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros"] }
serde = "1.0.215"
serde_json = { version = "1", features = ["raw_value"] }
# Documentation: https://docs.rs/vercel_runtime/latest/vercel_runtime
vercel_runtime = { version = "1" }
url = "2.5.4"

[lib]
path = "api/utils.rs"

# Each handler has to be specified as [[bin]]
[[bin]]
name = "crab"
path = "api/crab.rs"

[[bin]]
name = "echo"
path = "api/echo.rs"

[[bin]]
name = "search"
path = "api/search.rs"

[workspace]
members = [
    "tools/add",
    # Add more tool directories as needed
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hongmeng Zhai <zhaihongmeng@gmail.com>"]

[workspace.dependencies]
wasm-bindgen = "0.2.97"
console_error_panic_hook = { version = "0.1.7" }
